--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - 4444:4444
     networks:
-            - rede_gpd
+            - network_gpd
     volumes:
         - ./gpd-plannig-tool-backend/log:/app/log
     restart: always
@@ -51,10 +51,10 @@ services:
     ports:
       - 8001:80
     networks:
-      - rede_gpd
+      - network_gpd
 
 networks:
-  rede_livros:
+  network_gpd:
     driver: bridge
 volumes:
   dbMyApp:
