--- a/gpd-plannig-tool-frontend/.env
+++ b/gpd-plannig-tool-frontend/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL="https://api-lojavirtual.azurewebsites.net/api"
+VITE_API_BASE_URL="https://api-gpd-planning-tool.azurewebsites.net/api"
 VITE_ROTA_INFOS_API="/"
 VITE_ROTA_LIVROS="/livros"
