--- a/gpd-plannig-tool-frontend/package.json
+++ b/gpd-plannig-tool-frontend/package.json
@@ -15,7 +15,9 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/x-date-pickers": "^6.14.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
