--- a/gpd-plannig-tool-frontend/package.json
+++ b/gpd-plannig-tool-frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.9",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
