--- a/gpd-plannig-tool-frontend/package.json
+++ b/gpd-plannig-tool-frontend/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@mui/x-date-pickers": "^6.14.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
