--- a/gpd-plannig-tool-backend/.env
+++ b/gpd-plannig-tool-backend/.env
@@ -6,6 +6,6 @@ ESCREVER_LOG_ARQUIVO=true
 BD_DIALETO="mysql"
 BD_ENDERECO="db-lojavirtual.mysql.database.azure.com"
 BD_PORTA=3306
-BD_BANCODEDADOS="loja-livros"
+BD_BANCODEDADOS="gpd-planning-tool"
 BD_USUARIO="userlojavirtual"
 BD_SENHA="@M0nt31r0"
