--- a/gpd-plannig-tool-frontend/.env
+++ b/gpd-plannig-tool-frontend/.env
@@ -1,4 +1,4 @@
-#VITE_API_BASE_URL="https://api-gpd-planning-tool.azurewebsites.net/api"
-VITE_API_BASE_URL="http://localhost:4444/api"
+VITE_API_BASE_URL="https://api-gpd-planning-tool.azurewebsites.net/api"
+#VITE_API_BASE_URL="http://localhost:4444/api"
 VITE_ROTA_INFOS_API="/"
 VITE_ROTA_PRODUTOS="/produtos"
