--- a/gpd-plannig-tool-frontend/public/web.config
+++ b/gpd-plannig-tool-frontend/public/web.config
@@ -8,8 +8,9 @@
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+             <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/index.html" />
+          <action type="Rewrite" url="/" />
         </rule>
       </rules>
     </rewrite>
