--- a/gpd-plannig-tool-frontend/package.json
+++ b/gpd-plannig-tool-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webacademy-livros-frontend",
+  "name": "gpd-planning-tool",
   "private": true,
   "version": "0.0.0",
   "type": "module",
