--- a/gpd-plannig-tool-backend/package.json
+++ b/gpd-plannig-tool-backend/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
