--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   backendGpdPlannigTool:
     image: acrgleidev.azurecr.io/backend-gpd-plannig-tool:${TAG}
+#    image: backend-gpd-plannig-tool
     container_name: backend-gpd-plannig-tool
     build:
       context: gpd-plannig-tool-backend
@@ -17,6 +18,7 @@ services:
 
   frontendGpdPlannigTool:
     image: acrgleidev.azurecr.io/frontend-gpd-plannig-tool:${TAG}
+#    image: frontend-gpd-plannig-tool
     container_name: frontend-gpd-plannig-tool
     build:
       context: gpd-plannig-tool-frontend
