--- a/gpd-plannig-tool-backend/.env
+++ b/gpd-plannig-tool-backend/.env
@@ -4,8 +4,10 @@ PORTA=4444
 ESCREVER_LOG_ARQUIVO=true
 
 BD_DIALETO="mysql"
-BD_ENDERECO="db-lojavirtual.mysql.database.azure.com"
+#BD_ENDERECO="db-lojavirtual.mysql.database.azure.com"
+BD_ENDERECO="localhost"
 BD_PORTA=3306
 BD_BANCODEDADOS="gpd-planning-tool"
-BD_USUARIO="userlojavirtual"
+#BD_USUARIO="userlojavirtual"
+BD_USUARIO="usergpd"
 BD_SENHA="@M0nt31r0"
